# Telegram_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
src/bot/: keyboard.py  models.py  service.py  state.py
src/settings/: bot.py  database.py  settings.py
src/user/: repository.py  service.py
